--- a/eval/ocr_eval_notebook.ipynb
+++ b/eval/ocr_eval_notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1891933c",
+   "id": "e64db900",
    "metadata": {},
    "source": [
     "## Context"
@@ -28,7 +28,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29e23fa7",
+   "id": "e53b5917",
+   "metadata": {},
+   "source": [
+    "## Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1542c6e",
+   "metadata": {},
+   "source": [
+    "We benchmark different groups of algorithms:\n",
+    "\n",
+    "- **Transformer based OCR (TrOCR)** (`trocr-base-printed`, `trocr-base-handwritten`): recognition-first, sequence-to-sequence transformer models that directly map an image crop to text. Strong language modeling and robustness to moderate noise, with separate variants specialized for printed versus handwritten text.\n",
+    "\n",
+    "- **Classical OCR engine (Tesseract)** (`tesseract`, `tesseract@eng,psm=6,oem=3`): a mature OCR pipeline with explicit layout assumptions and extensive heuristics. Performance is highly sensitive to configuration, so including both default and tuned settings highlights the impact of language selection, segmentation strategy, and engine mode.\n",
+    "\n",
+    "- **Deep learning OCR baseline (EasyOCR)** (`easyocr_en`): a general-purpose neural OCR system combining text detection and recognition. Typically more resilient than classical OCR on low-quality imagery while remaining straightforward to run.\n",
+    "\n",
+    "- **End-to-end document OCR stacks (DocTR)** (`doctr_linknet_resnet18_vitstr_small`, `doctr_db_resnet50_crnn_vgg16_bn`): modular detector plus recognizer pipelines designed for document images. The two configurations contrast an efficiency-oriented setup with a higher-capacity stack, enabling speed versus accuracy comparisons under identical evaluation metrics.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eaea65ff",
    "metadata": {},
    "source": [
     "## Objectives"
@@ -36,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28d59a24",
+   "id": "c8b42e02",
    "metadata": {},
    "source": [
     "- Compare OCR models on transcription quality and runtime.\n",
@@ -47,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbde7919",
+   "id": "bce87378",
    "metadata": {},
    "source": [
     "## Metrics"
@@ -55,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7af0c82e",
+   "id": "5dccee9e",
    "metadata": {},
    "source": [
     "We evaluate OCR output with two edit-distance metrics computed against the reference text.\n",
@@ -589,6 +614,33 @@
     "summary_cer = summarize_eval_df(df, ocr_cer_spec)  \n",
     "order_cer = make_order(summary_cer)  \n",
     "summary_wer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "cee4dc39",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['trocr-base-handwritten',\n",
+       " 'trocr-base-printed',\n",
+       " 'tesseract',\n",
+       " 'tesseract@eng,psm=6,oem=3',\n",
+       " 'easyocr_en',\n",
+       " 'doctr_linknet_resnet18_vitstr_small',\n",
+       " 'doctr_db_resnet50_crnn_vgg16_bn']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(summary_wer[\"model\"])"
    ]
   },
   {
@@ -1476,7 +1528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4055b2ad",
+   "id": "40af3404",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1484,7 +1536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcc8d8a2",
+   "id": "6218fa33",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1492,7 +1544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36a47834",
+   "id": "3b7ba37f",
    "metadata": {},
    "outputs": [],
    "source": []
