added qa first version

--- a/notebooks/video_summary.ipynb
+++ b/notebooks/video_summary.ipynb
@@ -1492,9 +1492,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (multimodal)",
+   "display_name": ".venv",
    "language": "python",
-   "name": "multimodal"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
